// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ToggleGroup > renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.75rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-8 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-12:active .emotion-21[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-12[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.125rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-16 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-18 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-20 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-20:hover {
  background-color: #d9dadd;
}

.emotion-20:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-20:focus-within,
.emotion-20:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-20[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-20[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-20[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-20[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-20[data-checked="true"]:focus-within,
.emotion-20[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-20[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-20[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-20[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-20[data-error="true"]:focus-within,
.emotion-20[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-20[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-20[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-20[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-22 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-22[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <div
            class="emotion-6 emotion-1"
          >
            <legend
              class="emotion-8 emotion-9"
            >
              Label 
            </legend>
          </div>
          <div
            class="emotion-10 emotion-1"
          >
            <label
              aria-disabled="false"
              class="emotion-12 emotion-13"
            >
              <div
                class="emotion-14 emotion-1"
              >
                <div
                  class="emotion-16 emotion-17"
                >
                  <span
                    class="emotion-18 emotion-9"
                  >
                    Toggle 1
                  </span>
                </div>
              </div>
              <div
                class="emotion-20 emotion-21"
                data-checked="false"
                data-disabled="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  class="emotion-22 emotion-23"
                  id="«r1»"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="emotion-12 emotion-13"
            >
              <div
                class="emotion-14 emotion-1"
              >
                <div
                  class="emotion-16 emotion-17"
                >
                  <span
                    class="emotion-18 emotion-9"
                  >
                    Toggle 2
                  </span>
                </div>
              </div>
              <div
                class="emotion-20 emotion-21"
                data-checked="false"
                data-disabled="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  class="emotion-22 emotion-23"
                  id="«r4»"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleGroup > renders correctly with direction row 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.75rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-8 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-12:active .emotion-21[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-12[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.125rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-16 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-18 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-20 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-20:hover {
  background-color: #d9dadd;
}

.emotion-20:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-20:focus-within,
.emotion-20:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-20[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-20[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-20[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-20[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-20[data-checked="true"]:focus-within,
.emotion-20[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-20[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-20[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-20[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-20[data-error="true"]:focus-within,
.emotion-20[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-20[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-20[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-20[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-22 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-22[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <div
            class="emotion-6 emotion-1"
          >
            <legend
              class="emotion-8 emotion-9"
            >
              Label 
            </legend>
          </div>
          <div
            class="emotion-10 emotion-1"
          >
            <label
              aria-disabled="false"
              class="emotion-12 emotion-13"
            >
              <div
                class="emotion-14 emotion-1"
              >
                <div
                  class="emotion-16 emotion-17"
                >
                  <span
                    class="emotion-18 emotion-9"
                  >
                    Toggle 1
                  </span>
                </div>
              </div>
              <div
                class="emotion-20 emotion-21"
                data-checked="false"
                data-disabled="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  class="emotion-22 emotion-23"
                  id="«r8»"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="emotion-12 emotion-13"
            >
              <div
                class="emotion-14 emotion-1"
              >
                <div
                  class="emotion-16 emotion-17"
                >
                  <span
                    class="emotion-18 emotion-9"
                  >
                    Toggle 2
                  </span>
                </div>
              </div>
              <div
                class="emotion-20 emotion-21"
                data-checked="false"
                data-disabled="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  class="emotion-22 emotion-23"
                  id="«rb»"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleGroup > renders correctly with error content 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.75rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-8 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-12:active .emotion-21[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-12[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.125rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-16 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-18 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-20 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-20:hover {
  background-color: #d9dadd;
}

.emotion-20:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-20:focus-within,
.emotion-20:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-20[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-20[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-20[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-20[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-20[data-checked="true"]:focus-within,
.emotion-20[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-20[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-20[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-20[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-20[data-error="true"]:focus-within,
.emotion-20[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-20[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-20[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-20[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-22 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-22[disabled] {
  cursor: not-allowed;
}

.emotion-36 {
  color: #b3144d;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <div
            class="emotion-6 emotion-1"
          >
            <legend
              class="emotion-8 emotion-9"
            >
              Label 
            </legend>
          </div>
          <div
            class="emotion-10 emotion-1"
          >
            <label
              aria-disabled="false"
              class="emotion-12 emotion-13"
            >
              <div
                class="emotion-14 emotion-1"
              >
                <div
                  class="emotion-16 emotion-17"
                >
                  <span
                    class="emotion-18 emotion-9"
                  >
                    Toggle 1
                  </span>
                </div>
              </div>
              <div
                class="emotion-20 emotion-21"
                data-checked="false"
                data-disabled="false"
                data-error="true"
              >
                <input
                  aria-checked="false"
                  class="emotion-22 emotion-23"
                  id="«rn»"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="emotion-12 emotion-13"
            >
              <div
                class="emotion-14 emotion-1"
              >
                <div
                  class="emotion-16 emotion-17"
                >
                  <span
                    class="emotion-18 emotion-9"
                  >
                    Toggle 2
                  </span>
                </div>
              </div>
              <div
                class="emotion-20 emotion-21"
                data-checked="false"
                data-disabled="false"
                data-error="true"
              >
                <input
                  aria-checked="false"
                  class="emotion-22 emotion-23"
                  id="«rq»"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
      <p
        class="emotion-36 emotion-9"
      >
        Eror content
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleGroup > renders correctly with helper content 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.75rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-8 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-12:active .emotion-21[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-12[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.125rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-16 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-18 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-20 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-20:hover {
  background-color: #d9dadd;
}

.emotion-20:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-20:focus-within,
.emotion-20:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-20[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-20[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-20[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-20[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-20[data-checked="true"]:focus-within,
.emotion-20[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-20[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-20[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-20[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-20[data-error="true"]:focus-within,
.emotion-20[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-20[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-20[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-20[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-22 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-22[disabled] {
  cursor: not-allowed;
}

.emotion-36 {
  color: #727683;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <div
            class="emotion-6 emotion-1"
          >
            <legend
              class="emotion-8 emotion-9"
            >
              Label 
            </legend>
          </div>
          <div
            class="emotion-10 emotion-1"
          >
            <label
              aria-disabled="false"
              class="emotion-12 emotion-13"
            >
              <div
                class="emotion-14 emotion-1"
              >
                <div
                  class="emotion-16 emotion-17"
                >
                  <span
                    class="emotion-18 emotion-9"
                  >
                    Toggle 1
                  </span>
                </div>
              </div>
              <div
                class="emotion-20 emotion-21"
                data-checked="false"
                data-disabled="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  class="emotion-22 emotion-23"
                  id="«rf»"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="emotion-12 emotion-13"
            >
              <div
                class="emotion-14 emotion-1"
              >
                <div
                  class="emotion-16 emotion-17"
                >
                  <span
                    class="emotion-18 emotion-9"
                  >
                    Toggle 2
                  </span>
                </div>
              </div>
              <div
                class="emotion-20 emotion-21"
                data-checked="false"
                data-disabled="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  class="emotion-22 emotion-23"
                  id="«ri»"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
      <p
        class="emotion-36 emotion-9"
      >
        Helper content
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToggleGroup > renders correctly with required prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.75rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-8 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  color: #b3144d;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-14:active .emotion-23[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-14[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.125rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-18 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-20 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-22 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-22:hover {
  background-color: #d9dadd;
}

.emotion-22:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-22:focus-within,
.emotion-22:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-22[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-22[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-22[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-22[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-22[data-checked="true"]:focus-within,
.emotion-22[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-22[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-22[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-22[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-22[data-error="true"]:focus-within,
.emotion-22[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-22[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-22[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-22[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-24 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-24[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <div
            class="emotion-6 emotion-1"
          >
            <legend
              class="emotion-8 emotion-9"
            >
              Label 
              <sup
                class="emotion-10 emotion-9"
              >
                *
              </sup>
            </legend>
          </div>
          <div
            class="emotion-12 emotion-1"
          >
            <label
              aria-disabled="false"
              class="emotion-14 emotion-15"
            >
              <div
                class="emotion-16 emotion-1"
              >
                <div
                  class="emotion-18 emotion-19"
                >
                  <span
                    class="emotion-20 emotion-9"
                  >
                    Toggle 1
                  </span>
                </div>
              </div>
              <div
                class="emotion-22 emotion-23"
                data-checked="false"
                data-disabled="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  class="emotion-24 emotion-25"
                  id="«r10»"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="emotion-14 emotion-15"
            >
              <div
                class="emotion-16 emotion-1"
              >
                <div
                  class="emotion-18 emotion-19"
                >
                  <span
                    class="emotion-20 emotion-9"
                  >
                    Toggle 2
                  </span>
                </div>
              </div>
              <div
                class="emotion-22 emotion-23"
                data-checked="false"
                data-disabled="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  class="emotion-24 emotion-25"
                  id="«r13»"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;
